<?xml version="1.0"?>
<package>
  <name>ik_benchmarks</name>
  <version>0.0.0</version>
  <description>Scripts for benchmarking MoveIt IK solvers</description>

  <maintainer email="goerner@informatik.uni-hamburg.de">Michael Goerner</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
